--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "debug": "^2.1.1",
-    "lodash": "^3.3.1"
+    "escape-string-regexp": "^1.0.3",
+    "lodash": "^3.3.1",
+    "parse5": "^1.4.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
