--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "debug": "^2.1.3",
+    "escape-string-regexp": "^1.0.3",
     "lodash": "^3.6.0",
-    "path-exists": "^1.0.0"
+    "parse5": "^1.4.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
